--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./font/iconfont.css">
     <link rel="stylesheet" href="./css/index.css">
 </head>
-<body style="height: 6080px">
+<body>
     <div class="top"></div>
     <header>
         <div class="nav">
